devel
-----

* React dev mode now supports hot reload combined with proxy for development.

* Added read-write-locks for parallel move shard operations.

* Fixed issue #10867: arangod based binaries lack product version info and icon
  on Windows.

* Fix string comparison bug that lead to traversal queries accepting prefixes of
  "edges" and "vertices" to be used as object accessors for the path object.

* Fixed internal traversal edge collection cache being filled up correctly.
  Edges are able to point to other edges, but those we're not applied to the
  cache.

* Fix string comparison bug that lead to traversal queries accepting
  prefixes of "edges" and "vertices" to be used as object accessors
  for the path object.

* Fix #10852. Nested spliced subqueries could return wrong results in some cases
  when some of the concerned subqueries did not return any values.

* Fix string comparison bug that lead to traversal queries accepting prefixes of
  "edges" and "vertices" to be used as object accessors for the path object.

* Add ability to choose logging to file in Windows installer of ArangoDB server
  (enabled by default).

  ArangoDB-logs folder with arangod.log should be stored in %PROGRAMDATA% and
  %LOCALAPPDATA% for all users and single user installation respectively.

* Fixed issue #10725: Wrong document count shown inside an empty collection in
  the web UI.

* Fix installation of arangoinspect and libraries in Windows client installer.

* Now clearing an internal map inside the traverser engine correctly.

* Ported `/_admin/cluster*` API to C++.

* Introduced AsyncAgencyComm for asynchronous internal agency requests.

* Fix bug affecting spliced subqueries when memory blocks are reused.

* Hide swagger api calls in list by default

* Fix Windows client package JS installation paths.

* Updated arangosync to 0.7.2.

* Renamed document / index / vertex "handle" to "identifier" / "id" for
  consistency in documentation and error messages.
