@@ -64,11 +64,12 @@ void Aqlerror(YYLTYPE* locp,
   parser->registerParseError(TRI_ERROR_QUERY_PARSE, message, locp->first_line, locp->first_column);
 }
 
+namespace {
 /// @brief check if any of the variables used in the INTO expression were
 /// introduced by the COLLECT itself, in which case it would fail
-static void CheckIntoVariables(Parser* parser, AstNode const* expression,
-                               int line, int column,
-                               ::arangodb::containers::HashSet<Variable const*> const& variablesIntroduced) {
+void checkIntoVariables(Parser* parser, AstNode const* expression,
+                        int line, int column,
+                        ::arangodb::containers::HashSet<Variable const*> const& variablesIntroduced) {
   if (expression == nullptr) {
     return;
   }
@@ -86,10 +87,10 @@ static void CheckIntoVariables(Parser* parser, AstNode const* expression,
 }
 
 /// @brief register variables in the scope
-static void RegisterAssignVariables(Parser* parser, arangodb::aql::Scopes* scopes,
-                                    int line, int column,
-                                    ::arangodb::containers::HashSet<Variable const*>& variablesIntroduced,
-                                    AstNode const* vars) {
+void registerAssignVariables(Parser* parser, arangodb::aql::Scopes* scopes,
+                             int line, int column,
+                             ::arangodb::containers::HashSet<Variable const*>& variablesIntroduced,
+                             AstNode const* vars) {
   ::arangodb::containers::HashSet<Variable const*> varsInAssignment;
 
   size_t const n = vars->numMembers();
@@ -120,7 +121,7 @@ static void RegisterAssignVariables(Parser* parser, arangodb::aql::Scopes* scope
 }
 
 /// @brief validate the aggregate variables expressions
-static bool ValidateAggregates(Parser* parser, AstNode const* aggregates) {
+bool validateAggregates(Parser* parser, AstNode const* aggregates) {
   size_t const n = aggregates->numMembers();
 
   for (size_t i = 0; i < n; ++i) {
@@ -155,7 +156,7 @@ static bool ValidateAggregates(Parser* parser, AstNode const* aggregates) {
 }
 
 /// @brief start a new scope for the collect
-static bool StartCollectScope(arangodb::aql::Scopes* scopes) {
+bool startCollectScope(arangodb::aql::Scopes* scopes) {
   // check if we are in the main scope
   if (scopes->type() == arangodb::aql::AQL_SCOPE_MAIN) {
     return false;
@@ -169,7 +170,7 @@ static bool StartCollectScope(arangodb::aql::Scopes* scopes) {
 }
 
 /// @brief get the INTO variable stored in a node (may not exist)
-static AstNode const* GetIntoVariable(Parser* parser, AstNode const* node) {
+AstNode const* getIntoVariable(Parser* parser, AstNode const* node) {
   if (node == nullptr) {
     return nullptr;
   }
@@ -189,7 +190,7 @@ static AstNode const* GetIntoVariable(Parser* parser, AstNode const* node) {
 }
 
 /// @brief get the INTO variable = expression stored in a node (may not exist)
-static AstNode const* GetIntoExpression(AstNode const* node) {
+AstNode const* getIntoExpression(AstNode const* node) {
   if (node == nullptr || node->type == NODE_TYPE_VALUE) {
     return nullptr;
   }
@@ -201,7 +202,7 @@ static AstNode const* GetIntoExpression(AstNode const* node) {
   return node->getMember(1);
 }
 
-static AstNode* TransformOutputVariables(Parser* parser, AstNode const* names) {
+AstNode* transformOutputVariables(Parser* parser, AstNode const* names) {
   auto wrapperNode = parser->ast()->createNodeArray();
   for (size_t i = 0; i < names->numMembers(); ++i) {
     AstNode* variableNameNode = names->getMemberUnchecked(i);
@@ -211,6 +212,8 @@ static AstNode* TransformOutputVariables(Parser* parser, AstNode const* names) {
   }
   return wrapperNode;
 }
+
+} // namespace
 
 %}
 
@@ -356,6 +359,7 @@ static AstNode* TransformOutputVariables(Parser* parser, AstNode const* names) {
 %type <node> k_shortest_paths_graph_info;
 %type <node> optional_array_elements;
 %type <node> array_elements_list;
+%type <node> array_element;
 %type <node> for_options;
 %type <node> object;
 %type <node> options;
@@ -700,7 +704,7 @@ for_statement:
       if (variableNamesNode->numMembers() > 3) {
         parser->registerParseError(TRI_ERROR_QUERY_PARSE, "Traversals only have one, two or three return variables", yylloc.first_line, yylloc.first_column);
       }
-      auto variablesNode = TransformOutputVariables(parser, variableNamesNode);
+      auto variablesNode = ::transformOutputVariables(parser, variableNamesNode);
       auto graphInfoNode = static_cast<AstNode*>($4);
       TRI_ASSERT(graphInfoNode != nullptr);
       TRI_ASSERT(graphInfoNode->type == NODE_TYPE_ARRAY);
@@ -732,7 +736,7 @@ for_statement:
       if (variableNamesNode->numMembers() > 2) {
         parser->registerParseError(TRI_ERROR_QUERY_PARSE, "ShortestPath only has one or two return variables", yylloc.first_line, yylloc.first_column);
       }
-      auto variablesNode = TransformOutputVariables(parser, variableNamesNode);
+      auto variablesNode = ::transformOutputVariables(parser, variableNamesNode);
       auto graphInfoNode = static_cast<AstNode*>($4);
       TRI_ASSERT(graphInfoNode != nullptr);
       TRI_ASSERT(graphInfoNode->type == NODE_TYPE_ARRAY);
@@ -750,7 +754,7 @@ for_statement:
       if (variableNamesNode->numMembers() > 1) {
           parser->registerParseError(TRI_ERROR_QUERY_PARSE, "k Shortest Paths only has one return variable", yylloc.first_line, yylloc.first_column);
       }
-      auto variablesNode = TransformOutputVariables(parser, variableNamesNode);
+      auto variablesNode = ::transformOutputVariables(parser, variableNamesNode);
       auto graphInfoNode = static_cast<AstNode*>($4);
       TRI_ASSERT(graphInfoNode != nullptr);
       TRI_ASSERT(graphInfoNode->type == NODE_TYPE_ARRAY);
@@ -817,7 +821,7 @@ collect_statement:
       /* COLLECT WITH COUNT INTO var OPTIONS ... */
       auto scopes = parser->ast()->scopes();
 
-      StartCollectScope(scopes);
+      ::startCollectScope(scopes);
 
       auto node = parser->ast()->createNodeCollectCount(parser->ast()->createNodeArray(), $2.value, $2.length, $3);
       parser->ast()->addOperation(node);
@@ -826,9 +830,9 @@ collect_statement:
       /* COLLECT var = expr WITH COUNT INTO var OPTIONS ... */
       auto scopes = parser->ast()->scopes();
 
-      if (StartCollectScope(scopes)) {
+      if (::startCollectScope(scopes)) {
         ::arangodb::containers::HashSet<Variable const*> variables;
-        RegisterAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variables, $1);
+        ::registerAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variables, $1);
       }
 
       auto node = parser->ast()->createNodeCollectCount($1, $2.value, $2.length, $3);
@@ -839,21 +843,21 @@ collect_statement:
       ::arangodb::containers::HashSet<Variable const*> variablesIntroduced;
       auto scopes = parser->ast()->scopes();
 
-      if (StartCollectScope(scopes)) {
-        RegisterAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $2);
+      if (::startCollectScope(scopes)) {
+        ::registerAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $2);
       }
 
       // validate aggregates
-      if (!ValidateAggregates(parser, $2)) {
+      if (!::validateAggregates(parser, $2)) {
         YYABORT;
       }
 
       if ($3 != nullptr && $3->type == NODE_TYPE_ARRAY) {
-        CheckIntoVariables(parser, $3->getMember(1), yylloc.first_line, yylloc.first_column, variablesIntroduced);
+        ::checkIntoVariables(parser, $3->getMember(1), yylloc.first_line, yylloc.first_column, variablesIntroduced);
       }
 
-      AstNode const* into = GetIntoVariable(parser, $3);
-      AstNode const* intoExpression = GetIntoExpression($3);
+      AstNode const* into = ::getIntoVariable(parser, $3);
+      AstNode const* intoExpression = ::getIntoExpression($3);
 
       auto node = parser->ast()->createNodeCollect(parser->ast()->createNodeArray(), $2, into, intoExpression, nullptr, $3);
       parser->ast()->addOperation(node);
@@ -863,17 +867,17 @@ collect_statement:
       ::arangodb::containers::HashSet<Variable const*> variablesIntroduced;
       auto scopes = parser->ast()->scopes();
 
-      if (StartCollectScope(scopes)) {
-        RegisterAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $1);
-        RegisterAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $2);
+      if (::startCollectScope(scopes)) {
+        ::registerAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $1);
+        ::registerAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $2);
       }
 
-      if (! ValidateAggregates(parser, $2)) {
+      if (!::validateAggregates(parser, $2)) {
         YYABORT;
       }
 
       if ($3 != nullptr && $3->type == NODE_TYPE_ARRAY) {
-        CheckIntoVariables(parser, $3->getMember(1), yylloc.first_line, yylloc.first_column, variablesIntroduced);
+        ::checkIntoVariables(parser, $3->getMember(1), yylloc.first_line, yylloc.first_column, variablesIntroduced);
       }
 
       // note all group variables
@@ -908,8 +912,8 @@ collect_statement:
         }
       }
 
-      AstNode const* into = GetIntoVariable(parser, $3);
-      AstNode const* intoExpression = GetIntoExpression($3);
+      AstNode const* into = ::getIntoVariable(parser, $3);
+      AstNode const* intoExpression = ::getIntoExpression($3);
 
       auto node = parser->ast()->createNodeCollect($1, $2, into, intoExpression, nullptr, $4);
       parser->ast()->addOperation(node);
@@ -919,16 +923,16 @@ collect_statement:
       ::arangodb::containers::HashSet<Variable const*> variablesIntroduced;
       auto scopes = parser->ast()->scopes();
 
-      if (StartCollectScope(scopes)) {
-        RegisterAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $1);
+      if (::startCollectScope(scopes)) {
+        ::registerAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $1);
       }
 
       if ($2 != nullptr && $2->type == NODE_TYPE_ARRAY) {
-        CheckIntoVariables(parser, $2->getMember(1), yylloc.first_line, yylloc.first_column, variablesIntroduced);
+        ::checkIntoVariables(parser, $2->getMember(1), yylloc.first_line, yylloc.first_column, variablesIntroduced);
       }
 
-      AstNode const* into = GetIntoVariable(parser, $2);
-      AstNode const* intoExpression = GetIntoExpression($2);
+      AstNode const* into = ::getIntoVariable(parser, $2);
+      AstNode const* intoExpression = ::getIntoExpression($2);
 
       auto node = parser->ast()->createNodeCollect($1, parser->ast()->createNodeArray(), into, intoExpression, nullptr, $3);
       parser->ast()->addOperation(node);
@@ -938,8 +942,8 @@ collect_statement:
       ::arangodb::containers::HashSet<Variable const*> variablesIntroduced;
       auto scopes = parser->ast()->scopes();
 
-      if (StartCollectScope(scopes)) {
-        RegisterAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $1);
+      if (::startCollectScope(scopes)) {
+        ::registerAssignVariables(parser, scopes, yylloc.first_line, yylloc.first_column, variablesIntroduced, $1);
       }
 
       if ($2 == nullptr &&
@@ -948,11 +952,11 @@ collect_statement:
       }
 
       if ($2 != nullptr && $2->type == NODE_TYPE_ARRAY) {
-        CheckIntoVariables(parser, $2->getMember(1), yylloc.first_line, yylloc.first_column, variablesIntroduced);
+        ::checkIntoVariables(parser, $2->getMember(1), yylloc.first_line, yylloc.first_column, variablesIntroduced);
       }
 
-      AstNode const* into = GetIntoVariable(parser, $2);
-      AstNode const* intoExpression = GetIntoExpression($2);
+      AstNode const* into = ::getIntoVariable(parser, $2);
+      AstNode const* intoExpression = ::getIntoExpression($2);
 
       auto node = parser->ast()->createNodeCollect($1, parser->ast()->createNodeArray(), into, intoExpression, $3, $4);
       parser->ast()->addOperation(node);
@@ -1532,14 +1536,20 @@ optional_array_elements:
     }
   | array_elements_list {
     }
+  | array_elements_list T_COMMA {
+    }
   ;
 
 array_elements_list:
+    array_element {
+    }
+  | array_elements_list T_COMMA array_element {
+    }
+  ;
+
+array_element:
     expression {
       parser->pushArrayElement($1);
-    }
-  | array_elements_list T_COMMA expression {
-      parser->pushArrayElement($3);
     }
   ;
 
@@ -1622,6 +1632,8 @@ optional_object_elements:
     /* empty */ {
     }
   | object_elements_list {
+    }
+  | object_elements_list T_COMMA {
     }
   ;
 
