@@ -34,16 +34,8 @@ var helper = require("@arangodb/aql-helper");
 var getParseResults = helper.getParseResults;
 var assertParseError = helper.assertParseError;
 
-////////////////////////////////////////////////////////////////////////////////
-/// @brief test suite
-////////////////////////////////////////////////////////////////////////////////
-
 function ahuacatlParseTestSuite () {
   var errors = internal.errors;
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief return the collection names from the result
-////////////////////////////////////////////////////////////////////////////////
 
   function getCollections (result) {
     var collections = result.collections;
@@ -53,10 +45,6 @@ function ahuacatlParseTestSuite () {
     collections.sort();
     return collections;
   }
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief return the bind parameter names from the result
-////////////////////////////////////////////////////////////////////////////////
 
   function getParameters (result) {
     var parameters = result.parameters;
@@ -340,6 +328,58 @@ function ahuacatlParseTestSuite () {
           var column = parseInt(matches[2], 10);
           assertEqual(query[1][0], line);
           assertEqual(query[1][1], column);
+        }
+      });
+    },
+    
+    testTrailingCommas : function() {
+      let queries = [
+        [ "RETURN [ ]", [ ] ],
+        [ "RETURN [ 1, 2, 3 ]", [ 1, 2, 3 ] ],
+        [ "RETURN [ 1, 2, 3, ]", [ 1, 2, 3 ] ],
+        [ "RETURN [ 1, ]", [ 1 ] ],
+        [ "RETURN [ 1, 2, ]", [ 1, 2 ] ],
+        
+        [ "RETURN { }", { } ],
+        [ "RETURN { a: 1, b: 2, c: 3 }", { a: 1, b: 2, c :3 } ],
+        [ "RETURN { a: 1, b: 2, c: 3, }", { a: 1, b: 2, c: 3 } ],
+        [ "RETURN { a: 1, }", { a: 1 } ],
+        [ "RETURN { a: 1, b: 2, }", { a: 1, b: 2 } ],
+      ];
+
+      queries.forEach(function(query) {
+        let results = AQL_EXECUTE(query[0]).json;
+        assertEqual(query[1], results[0]);
+      });
+    },
+    
+    testTrailingCommasInvalid : function() {
+      let queries = [
+        "RETURN [ , ]",
+        "RETURN [ , 1 ]",
+        "RETURN [ , 1, ]",
+        "RETURN [ 1, , ]",
+        "RETURN [ 1, , 2 ]",
+        "RETURN [ 1, , 2, ]",
+        "RETURN [ , 2, 3 ]",
+        "RETURN [ 1, , 2 ]",
+
+        "RETURN { , }",
+        "RETURN { , a: 1 }",
+        "RETURN { , a: 1, }",
+        "RETURN { a: 1, , }",
+        "RETURN { a: 1, , b: 2 }",
+        "RETURN { a: 1, , b: 2, }",
+        "RETURN { , a: 2, b: 3 }",
+        "RETURN { a: 1, , b. 2 }",
+      ];
+
+      queries.forEach(function(query) {
+        try {
+          AQL_EXECUTE(query);
+          fail();
+        } catch (err) {
+          assertEqual(errors.ERROR_QUERY_PARSE.code, err.errorNum);
         }
       });
     },
