@@ -1,6 +1,14 @@
 devel
 -----
 
+* Support trailing commas in AQL object and array definitions as follows:
+
+      [ 1, 2, 3, ]
+      { a: 1, b: 2, }
+
+  In previous versions of ArangoDB, such trailing commas resulted in a query
+  parse error.
+
 * React dev mode now supports hot reload combined with proxy for development.
 
 * Added read-write-locks for parallel move shard operations.
